[Desktop Re-tooling]:: Now that mobile view is relatively complete, I went back to start fixing the desktop. Some oversights from mobile focus really made this a pain - particularly alignment. I think the main content is behaving as expected though.

--- a/style.css
+++ b/style.css
@@ -83,16 +83,16 @@ h6{
     /*justify left or centered, paragraph spacing is 10(px?), leading */
 }
 
+.passCriteria{
+    padding-left: 40px;
+}
+
 .textLink{
     font-weight: regular;
     font-size: 14pt;
     color: #343434;
     letter-spacing: 0;
     /*"leading"/line-spacing is 17(?)*/
-}
-
-.passCriteria{
-    padding-left: 40px;
 }
 
 /*===== Nissan Logo =====*/
@@ -121,8 +121,6 @@ h6{
     font-weight: 300;
 }
 
-
-
 .divider{
     margin-left: 20px;
     padding-left: 20px;
@@ -132,7 +130,17 @@ h6{
 }
 /*===== ========== =====*/
 
+/*===== Main Content Alignment (DESKTOP) =====*/
+.main-content-row-alignment{
+    margin-left: 150px; /*-15px standard column padding!!! --> For alignment on the left hand side for the "card"*/
+}
+/*===== ========== =====*/
+
 /*===== Card Styling =====*/
+.card-column-gutters{
+    padding: 0px 0px 0px 0px; /*This controls the spacing of the "visual" card on left and right in ****MOBILE**** view*/
+}
+
 .card-styling{
     margin-top: 40px;
     margin-bottom: 40px;
@@ -159,11 +167,6 @@ h6{
     background-image: url("assets/Branding_83x7.png");
 }
 
-.passCriteria{
-    padding-left: 40px;
-    margin-bottom: 5px;
-}
-
 .field-styling{
     /*total height of element is roughly 35px*/
     width: 100%;
@@ -188,30 +191,110 @@ h6{
     letter-spacing: 0;
 }
 
+.desktop-button-row{
+    padding: 30px 0px 40px 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 .submit-button{
     color: white;
+    border: none;
     background-color: #C3002F;
-    padding: 1.5rem 1.2rem 1.5rem 1.7rem;
-    width: 60%;
+    padding: 1.5rem 2.5rem 1.5rem 2.5rem;
+    margin-top: 0px;
+    width: 100%;
     font-size: 15px;
     text-align: left;
     align-items: center;
+    display: block;
+}
+
+.cancel-button{
+    color: white;
+    border: none;
+    background-color: #343434;
+    padding: 1.5rem 2.5rem 1.5rem 2.5rem;
+    margin-top: 0px;
+    width: 100%;
+    font-size: 15px;
+    text-align: left;
+    align-items: center;
+    display: inline-block;
 }
 
 .submit-carrot{
-    padding-left: 55%;
-    margin: 0px;
-    
+    padding-left: auto;
+    float: right;
+
     font-size:15pt;
     font-weight: 800;
-    display: inline-block;
-    
+}
+
+.cancel-link{
+    padding-top: 20px;
+    padding-bottom: 30px;
+
+    font-weight: 400;
+    font-size: 13pt;
+    color: #5c5c5c;
+    letter-spacing: 0;
+    text-decoration: underline;
+    display: none;
+}
+
+
+.FAQ-flavortext{
+    padding-left: 165px; /*controls alignment on left side*/
+}
+
+.FAQ-link{
+    padding-bottom: 30px;
+
+    font-weight: 400;
+    font-size: 13pt;
+    color: #5c5c5c;
+    letter-spacing: 0;
+    text-decoration: underline;
+    display: block;
 }
 /*===== ========= =====*/
 
 /*===== Footer =====*/
 .bottom-bar{
-    margin-top: 10vh;
+    padding: 25px 20px 10px 20px;
+    background-color:#343434;
+}
+
+.bottom-bar-column{
+    padding: 6px;
+    text-align: center;
+    max-width: fit-content;
+}
+
+.footer-link-style{
+    padding: 0px;
+    margin: 0px;
+
+    text-align: center;
+    white-space: nowrap;
+    font-weight: 300;
+    font-size: 11pt;
+    color: #EEEEEE;
+    letter-spacing: 0;
+    text-decoration: underline;
+}
+
+.footer-copyright{
+    font-weight: 400;
+    font-size: 11pt;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    color: #EEEEEE;
+    letter-spacing: 0;
+    max-width: fit-content;
+    display: inline-flex;
+    white-space: nowrap;
 }
 /*===== ========== =====*/
 
@@ -339,10 +422,25 @@ h6{
 }
 /*===== ========== =====*/
 
+/*===== Main Content Alignment (DESKTOP) =====*/
+.main-content-row-alignment{
+    margin-left: 0px; /*For alignment on the left hand side for the "card"*/
+    margin-right: 0px;
+}
+/*===== ========== =====*/
+
 /*===== Card Styling =====*/
+.card-column-gutters{
+    padding: 0px 15px 0px 15px; /*This controls the spacing of the "visual" card on left and right in mobile view*/
+}
+
 .card-styling{
     margin-top: 40px;
     margin-bottom: 40px;
+}
+
+.card-mobile-center{
+    justify-content: center;
 }
 
 .card-content-align{
